input type for level

--- a/character-tracker.html
+++ b/character-tracker.html
@@ -70,7 +70,7 @@
         <h3 class="character-background">Background: </h3>
         <input class="character-background char-inputs" id="character-background-input">
         <h3 class="character-level">Level: </h3>
-        <input class="character-level char-inputs" id="character-level-input">
+        <input class="character-level char-inputs" id="character-level-input" type="number" min="1" max="20">
     </div>
     <div class="character-backgrounds">
         <h3 class="character-backstory">Backstory: </h3>
