--- a/character-tracker.html
+++ b/character-tracker.html
@@ -60,11 +60,79 @@
     </div>
     <div class="character-being">
         <h3 class="character-species">Species: </h3>
-        <input class="character-species char-inputs" id="character-species-input">
+        <input type="text" list="species" class="character-species char-inputs" id="character-species-input">
+        <datalist id="species">
+          <option>Aarakockra</option>
+          <option>Aasimar</option>
+          <option>Autognome</option>
+          <option>Bugbear</option>
+          <option>Centaur</option>
+          <option>Changeling</option>
+          <option>Dhampir</option>
+          <option>Dragonborn</option>
+          <option>Dwarf</option>
+          <option>Duergar</option>
+          <option>Elf</option>
+          <option>Fairy</option>
+          <option>Firbolg</option>
+          <option>Genasi</option>
+          <option>Giff</option>
+          <option>Gith</option>
+          <option>Gnome</option>
+          <option>Goblin</option>
+          <option>Goliath</option>
+          <option>Hadozee</option>
+          <option>Half-Elf</option>
+          <option>Half-Orc</option>
+          <option>Halfling</option>
+          <option>Harengon</option>
+          <option>Hexblood Lineage</option>
+          <option>Hobgoblin</option>
+          <option>Human</option>
+          <option>Kalashtar</option>
+          <option>Kender</option>
+          <option>Kenku</option>
+          <option>Kobold</option>
+          <option>Leonin</option>
+          <option>Lizardfolk</option>
+          <option>Loxodon</option>
+          <option>Minotaur</option>
+          <option>Orc</option>
+          <option>Owlin</option>
+          <option>Plasmoid</option>
+          <option>Reborn Lineage</option>
+          <option>Satyr</option>
+          <option>Shifter</option>
+          <option>Simic Hybrid</option>
+          <option>Tabaxi</option>
+          <option>Thri-Kreen</option>
+          <option>Tiefling</option>
+          <option>Tortle</option>
+          <option>Triton</option>
+          <option>Vedalken</option>
+          <option>Verdan</option>
+          <option>Warforged</option>
+          <option>Yuan-Ti</option>
+        </datalist>
         <h3 class="character-subspecies">Subspecies: </h3>
         <input class="character-subspecies char-inputs" id="character-subspecies-input">
         <h3 class="character-job">Class: </h3>
-        <input class="character-job char-inputs" id="character-job-input">
+        <input type="text" list="jobs" class="character-job char-inputs" id="character-job-input">
+        <datalist id="jobs">
+          <option>Artificer</option>
+          <option>Barbarian</option>
+          <option>Bard</option>
+          <option>Cleric</option>
+          <option>Druid</option>
+          <option>Fighter</option>
+          <option>Monk</option>
+          <option>Paladin</option>
+          <option>Ranger</option>
+          <option>Rogue</option>
+          <option>Sorcerer</option>
+          <option>Warlock</option>
+          <option>Wizard</option>
+        </datalist>
         <h3 class="character-subjob">Subclass: </h3>
         <input class="character-subjob char-inputs" id="character-subjob-input">
         <h3 class="character-background">Background: </h3>
