--- a/character-tracker.html
+++ b/character-tracker.html
@@ -138,7 +138,28 @@
         <h3 class="character-background">Background: </h3>
         <input class="character-background char-inputs" id="character-background-input">
         <h3 class="character-level">Level: </h3>
-        <input class="character-level char-inputs" id="character-level-input" type="number" min="1" max="20">
+        <select class="character-level char-inputs" id="character-level-input">
+          <option>1</option>
+          <option>2</option>
+          <option>3</option>
+          <option>4</option>
+          <option>5</option>
+          <option>6</option>
+          <option>7</option>
+          <option>8</option>
+          <option>9</option>
+          <option>10</option>
+          <option>11</option>
+          <option>12</option>
+          <option>13</option>
+          <option>14</option>
+          <option>15</option>
+          <option>16</option>
+          <option>17</option>
+          <option>18</option>
+          <option>19</option>
+          <option>20</option>
+        </select>
     </div>
     <div class="character-backgrounds">
         <h3 class="character-backstory">Backstory: </h3>
