Backgrounds and half of their autofills

--- a/character-tracker.html
+++ b/character-tracker.html
@@ -136,7 +136,56 @@
         <h3 class="character-subjob">Subclass: </h3>
         <input class="character-subjob char-inputs" id="character-subjob-input">
         <h3 class="character-background">Background: </h3>
-        <input class="character-background char-inputs" id="character-background-input">
+        <input class="character-background char-inputs" id="character-background-input" list="backgounds">
+        <datalist id="backgounds">
+          <option>Acolyte</option>
+          <option>Anthropologist</option>
+          <option>Archaeologist</option>
+          <option>Athlete</option>
+          <option>Charlatan</option>
+          <option>City Watch</option>
+          <option>Clan Crafter</option>
+          <option>Cloistered Scholar</option>
+          <option>Courtier</option>
+          <option>Criminal</option>
+          <option>Entertainer</option>
+          <option>Faceless</option>
+          <option>Faction Agent</option>
+          <option>Far Traveler</option>
+          <option>Feylost</option>
+          <option>Fisher</option>
+          <option>Folk Hero</option>
+          <option>Giant Foundling</option>
+          <option>Gladiator</option>
+          <option>Guild Artisan</option>
+          <option>Guild Merchant</option>
+          <option>Haunted One</option>
+          <option>Hermit</option>
+          <option>House Agent</option>
+          <option>Inheritor</option>
+          <option>Investigator</option>
+          <option>Knight</option>
+          <option>Knight of the Order</option>
+          <option>Marine</option>
+          <option>Mercenary Veteran</option>
+          <option>Noble</option>
+          <option>Outlander</option>
+          <option>Pirate</option>
+          <option>Rewarded</option>
+          <option>Ruined</option>
+          <option>Rune Carver</option>
+          <option>Sage</option>
+          <option>Sailor</option>
+          <option>Shipwright</option>
+          <option>Smuggler</option>
+          <option>Soldier</option>
+          <option>Spy</option>
+          <option>Urban Bounty Hunter</option>
+          <option>Urchin</option>
+          <option>Uthgardt Tribe Member</option>
+          <option>Waterdhavian Noble</option>
+          <option>Witchlight Hand</option>
+        </datalist>
         <h3 class="character-level">Level: </h3>
         <select class="character-level char-inputs" id="character-level-input">
           <option>1</option>
