--- a/character-tracker.html
+++ b/character-tracker.html
@@ -16,6 +16,7 @@
         <div id="menuBar">
             <a href="index.html">Home</a>
             <a href="character-tracker.html">Character Tracker</a>
+            <a href="fey-curse-randomizer.html">Fey Curse Generator</a>
         </div>
         
         <div class="dropdown">
@@ -23,6 +24,7 @@
             <div id="hamburgerMenu" class="dropdown-content">
             <a href="index.html">Home</a>
             <a href="character-tracker.html">Character Tracker</a>
+            <a href="fey-curse-randomizer.html">Fey Curse Generator</a>
             </div>
         </div>
     </nav>
