--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div id="menuBar">
       <a href="index.html">Home</a>
       <a href="character-tracker.html">Character Tracker</a>
+      <a href="fey-curse-randomizer.html">Fey Curse Generator</a>
     </div>
     
       <div class="dropdown">
@@ -22,6 +23,7 @@
         <div id="hamburgerMenu" class="dropdown-content">
           <a href="index.html">Home</a>
           <a href="character-tracker.html">Character Tracker</a>
+          <a href="character-tracker.html">Fey Curse Generator</a>
         </div>
       </div>
       </nav>
